# mmzk-env

./: CHANGELOG.md  LICENSE  README.md  mmzk-env.cabal  project-structure.md
.github/workflows/: haskell.yml
app/: CustomMappingExample.hs  EnumExample.hs  NewtypeExample.hs  QuickstartExample.hs  WitnessExample.hs
src/Data/: Env.hs
src/Data/Env/: DefaultBool.hs  EnumParser.hs  ExtractFields.hs  ParseError.hs  RecordParser.hs  RecordParserP.hs  RecordParserW.hs  TypeParser.hs  TypeParserP.hs  TypeParserW.hs
src/Data/Env/Witness/: DefaultBool.hs  DefaultNum.hs  DefaultString.hs
test/: BasicTypeParserSpec.hs  ConfigParserSpec.hs  DefaultBoolSpec.hs  DefaultWitnessSpec.hs  EnumParserSpec.hs  RecordParserSpec.hs  RecordParserWSpec.hs  Spec.hs  TypeParserSpec.hs
